# MaidSafe-Drive

./: .gitmodules  .travis.yml  CMakeLists.txt  CTestConfig.cmake  README  README.md  licence.txt  maidsafe_fstest.cmake
docs/: nfs_drive.md
include/maidsafe/drive/: .drive.h.swp  .meta_data.h.swp  config.h  directory.h  directory_handler.h  directory_listing.h  directory_listing_handler.h  drive.h  drive_api.h  dummy_win_drive.h  file.h  file_context.h  mac_fuse.h  meta_data.h  path.h  return_codes.h  root_handler.h  symlink.h  unix_drive.h  utils.h  win_drive.h  win_handle.h  win_process.h
include/maidsafe/drive/tools/: launcher.h
src/maidsafe/drive/: cbfs_key.h.in  config.cc  demo_main.cc  directory.cc  directory_handler.cc  directory_listing.cc  directory_listing.h  directory_listing_handler.cc  directory_listing_handler.h  drive.cc  drive_main.cc  dummy_win_drive.cc  file.cc  file_context.cc  file_context.h  meta_data.cc  meta_data.h  path.cc  proto_structs.proto  root_handler.cc  share_keys.cc.xx  share_keys.h.xx  share_users.cc.xx  share_users.h.xx  symlink.cc  unix_drive.cc  utils.cc  utils.h  win_drive.cc  win_process.cc  win_service_main.cc
src/maidsafe/drive/installer/: cbfs_driver_installer.cc  cbfs_paths.h.in  main.cc
src/maidsafe/drive/local/: local_drive.cc
src/maidsafe/drive/network/: network_drive.cc
src/maidsafe/drive/tests/: .directory_handler_test.cc.swp  .drive_api_test.cc.swp  directory_handler_test.cc  directory_listing_handler_test.cc  directory_listing_test.cc  directory_test.cc  drive_api_test.cc  file_test.cc  filesystem_benchmark.cc  filesystem_test.cc  meta_data_test.cc  meta_data_test.h  shares_test.cc  test_main.cc  test_utils.cc  test_utils.h  unix_drive_test.cc  utils_test.cc  virtual_filesystem_test.cc  win_drive_test.cc
src/maidsafe/drive/tests/pjd-fstest-20080816/: fstest  fstest.c
src/maidsafe/drive/tests/pjd-fstest-20080816/tests/: misc.sh
src/maidsafe/drive/tests/pjd-fstest-20080816/tests/chown/: 00.t
src/maidsafe/drive/tests/pjd-fstest-20080816/tests/open/: 06.t  13.t
src/maidsafe/drive/tests/pjd-fstest-20080816/tests/utimens/: 00.t
src/maidsafe/drive/tests/regression/: regression_tests.cc
src/maidsafe/drive/tests/resources/: download.py  download_and_extract_zip.py  extract.py  maidsafe.bat  maidsafe.sh  poco.py  utf-8 old.txt
src/maidsafe/drive/tests/resources/cross_platform/: ids
src/maidsafe/drive/tests/resources/cross_platform/local_store/0/4/7/d/f/: e9ee46e8ebede5c657c5ad391db30cec853f25a67c728e8e7e4bf19887d53147b24442acc8f443ca3b5b8200698b160aa9b98869ec546b3bfeef1914a5a_6.1
src/maidsafe/drive/tests/resources/cross_platform/local_store/1/2/f/9/b/: bf41bb3c812bf46dc599e40c3b82c5302507ef58efdd2e669ec5e40f29c0e5e8cef90ba42f973cdde54d53795e130554c3aa08bece40eb89cead8854602_6.1
src/maidsafe/drive/tests/resources/cross_platform/local_store/1/5/2/6/1/: a1e140d13b7ba771970f4243c403a8808e5dd8c0c252d8a39f911b2a42e5bada4119380735ca8996aadf3cf2eb667db19ea249dd28e50ef3d47264a0907_6.1
src/maidsafe/drive/tests/resources/cross_platform/local_store/2/2/6/f/2/: 2d20c2f88299779e1b4d88fadea737553e42acf4d9ddb66478d0caa32f935753f1a666b4f32fdc87c8f659c83b7a23f54ac8c81681d51069abfb5815a9b_6.1
src/maidsafe/drive/tests/resources/cross_platform/local_store/2/8/f/6/7/: 007c1bc03ba1f9dc631979bd77c030fd6f660e210bb1ef2ad31e09f0582ab2cd93ae0de8854d902141245e5d3b6eacbeff94da055c6fee17e6ce0568410_6.1
src/maidsafe/drive/tests/resources/cross_platform/local_store/2/a/8/7/7/: a1355a57a6c3c83593dacc05a0134113bf0ec5e4782066c40a4ac86b20c2a68a2508b9847205e8dc1281aa471afbbca843156ed4dab6f0e9a8e18980388_6.1
src/maidsafe/drive/tests/resources/cross_platform/local_store/2/c/9/d/a/: 51b170d88a7643de3b7c7df32cbc9aa38e5cb56240953ef6e9a7212914bc57cf5fb4119b1830bfc475ca4c04640026e6c69d13c8c7f708b3025afb275db_6.1
src/maidsafe/drive/tests/resources/cross_platform/local_store/3/5/b/2/2/: 34782d74ae94dc83dad423a468e169b6a5b6b75536f3ef96d3f3db7e1b273dfe4ec0b14401d5b0a54c9b4e3bb55a826c5d3810d74131abf06fe9985dc07_6.1
src/maidsafe/drive/tests/resources/cross_platform/local_store/3/7/d/9/7/: 489c5b18e67da3b8af55bb9c01adb2daf2bb446d3f5f1a32b9fe23e790d20686257aec57b7ace1def84dbdb410399d5ff68b06f1b439b2a32f970df73c7_6.1
src/maidsafe/drive/tests/resources/cross_platform/local_store/4/2/e/5/6/: e77d9328666f84ed808cca173c3250faedd802d23bebf98292c64150b7cadc038ccfb2b1ad7934a3b5cbcc1e85e4bde73c3aaa9fd027d9b7ffd371d1b5a_6.1
src/maidsafe/drive/tests/resources/cross_platform/local_store/4/6/2/2/4/: 53ef7fafbd7ef4a96562b63ce5f150652aaba519257d7fc30f482667d72d47d046ab79aada3f75ee3be1f265e9cb56b6f7e8bd3aabb9398372a6090138f_6.1
src/maidsafe/drive/tests/resources/cross_platform/local_store/4/c/4/2/c/: 3a35a4bed66f54eb10fe9fd8bfc60690ce08aee1d20d850bc4be34f5a5744ae25de3d3bae4aedbe1bca411900fc557286afcfab4fbae96137a8edb564a8_6.1
src/maidsafe/drive/tests/resources/cross_platform/local_store/4/f/c/0/f/: 0c3b54bbe152c1b4a0724205c60c7b85b4203f0f914de73a82e7ddbd7bf1147f29096632ba614e7c1e9c4ae058c6cd12640daa781cfaa9c0ed8868c524e_6.1
src/maidsafe/drive/tests/resources/cross_platform/local_store/5/4/0/e/2/: 077e6056c443863534a7c73cd376749b051da4b84dd97bddd969aafbb00401106b98e379950faa22e233eca13887b985a650ae5017f577b2d8ef715fe37_6.1
src/maidsafe/drive/tests/resources/cross_platform/local_store/5/a/d/1/7/: 7318d84e4bc7f5087a15fd8bfa5681f9c848f792010c2266a6eb2044789e7b267cbaf0a28e922e92a91653bff927967a1870b821e86d96e4993b772881e_6.1
src/maidsafe/drive/tools/: UTF-8  filesystem_benchmark.cc  filesystem_commands.cc  filesystem_commands.h  filesystem_test.cc  filesystem_test.cc.autosave  filesystem_weekly.cc  launcher.cc  safe_storage.cc  tool_main.cc
src/maidsafe/drive/tools/commands/: close_file_command.cc  close_file_command.h  command_utils.cc  command_utils.h  create_file_command.cc  create_file_command.h  exit_tool_command.cc  exit_tool_command.h  linux_file_commands.cc  linux_file_commands.h  unix_file_commands.cc  unix_file_commands.h  windows_file_commands.cc  windows_file_commands.h
src/maidsafe/drive/win_service/: win_service_main.cc
(+26 files in other folders)
